--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,11 @@ body {
   text-shadow: none;
   outline: none; }
 
+.bitch{
+  height: 50%;
+  width: 50%;
+}
+
 ul {
   list-style: outside none none;
   margin: 0;
